Bugfixes to the Helm Chart release pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
   learning-service:
     name: Build learning service
     runs-on: ubuntu-latest
+    if: "false"
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -33,6 +34,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
   interface-service:
     name: Build interface service
+    if: "false"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -54,6 +56,7 @@ jobs:
   frontend:
     name: Build frontend
     runs-on: ubuntu-latest
+    if: "false"
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -83,6 +86,7 @@ jobs:
       CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       CR_OWNER: remla2022
       CR_GIT_REPO: stackoverflow-tagger
+      CR_RELEASE_NAME_TEMPLATE: "{{ .Version }}"
     steps:
       - uses: actions/checkout@v3
       - uses: helm/chart-releaser-action@v1.4.0
@@ -93,6 +97,9 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      - id: version
+        name: Determine version from tag
+        uses: ./.github/actions/read_tag
       - name: Prepare builder
         uses: ./.github/actions/builder
         with:
@@ -102,7 +109,7 @@ jobs:
         uses: ./.github/actions/builder_run
         with:
           image: ${{ env.HELM_BUILDER_NAME }}
-          command: task helm:package HELM_PACKAGE_DIR=.cr-release-packages
+          command: task helm:package VERSION=${{ steps.version.outputs.tag }} HELM_PACKAGE_DIR=.cr-release-packages
       - name: Upload release
         run: cr upload
       - name: Update Helm repository index
