--- a/helm/Taskfile.yml
+++ b/helm/Taskfile.yml
@@ -2,15 +2,14 @@ version: '3'
 
 vars:
   HELM_BUILDER_IMAGE: remla-stackoverflow-tagger/helm-builder
-  VERSION:
-    sh: git describe --tags --always --first-parent | sed 's/v//'
-  # Overridden by GitHub Actions to point at Helm Chart Releaser directory
+  # Overridden by GitHub Actions
+  VERSION: '{{ .VERSION | default "1.0.0-DEV" }}'
   HELM_PACKAGE_DIR: helm/charts
 
 tasks:
   lint: "helm lint helm/stackoverflow-tagger"
-  package: "helm package helm/stackoverflow-tagger --version {{.VERSION}} --app-version {{.VERSION}} -d {{.HELM_PACKAGE_DIR}}"
-  build_builder: "docker build --target builder -t {{.HELM_BUILDER_IMAGE}} ."
+  package: "helm package helm/stackoverflow-tagger --version 0.0.1 --app-version {{.VERSION}} -d {{.HELM_PACKAGE_DIR}}"
+  build_builder: "docker build --target builder -t {{.HELM_BUILDER_IMAGE}} -f helm/Dockerfile ."
   docker_run:
     deps: [ build_builder ]
     interactive: true
