--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,6 @@ jobs:
   learning-service:
     name: Build learning service
     runs-on: ubuntu-latest
-    if: "false"
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -34,7 +33,6 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
   interface-service:
     name: Build interface service
-    if: "false"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -56,7 +54,6 @@ jobs:
   frontend:
     name: Build frontend
     runs-on: ubuntu-latest
-    if: "false"
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -77,7 +74,7 @@ jobs:
   helm:
     name: Package and publish Helm Chart
     runs-on: ubuntu-latest
-#    if: github.event_name != 'pull_request'
+    if: github.event_name != 'pull_request'
     needs:
       - learning-service
       - interface-service
@@ -86,9 +83,12 @@ jobs:
       CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       CR_OWNER: remla2022
       CR_GIT_REPO: stackoverflow-tagger
-      CR_RELEASE_NAME_TEMPLATE: "{{ .Version }}"
+      CR_PACKAGE_PATH: helm/charts
+      CR_RELEASE_NAME_TEMPLATE: "v{{ .Version }}"
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - uses: helm/chart-releaser-action@v1.4.0
         with:
           install_only: true
@@ -109,8 +109,10 @@ jobs:
         uses: ./.github/actions/builder_run
         with:
           image: ${{ env.HELM_BUILDER_NAME }}
-          command: task helm:package VERSION=${{ steps.version.outputs.tag }} HELM_PACKAGE_DIR=.cr-release-packages
+          command: task helm:package VERSION=${{ steps.version.outputs.tag }}
       - name: Upload release
         run: cr upload
+        # Necessary until https://github.com/helm/chart-releaser/issues/187 is fixed
+      - run: mkdir .cr-index
       - name: Update Helm repository index
         run: cr index --push
