--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   IMAGE_NAME_BASE: ghcr.io/${{ github.repository }}
+  HELM_BUILDER_NAME: helm-builder:latest
 
 jobs:
   learning-service:
@@ -70,3 +71,48 @@ jobs:
           file: ./frontend/Dockerfile
           image: ${{ env.IMAGE_NAME_BASE }}/frontend
           push: ${{ github.event_name != 'pull_request' }}
+  helm:
+    name: Package and publish Helm Chart
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    needs:
+      - learning-service
+      - interface-service
+      - frontend
+    env:
+      CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      CR_OWNER: remla2022
+      CR_GIT_REPO: stackoverflow-tagger
+      CR_PACKAGE_PATH: helm/charts
+      CR_RELEASE_NAME_TEMPLATE: "v{{ .Version }}"
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: helm/chart-releaser-action@v1.4.0
+        with:
+          install_only: true
+      - uses: docker/setup-buildx-action@v2
+      - name: Configure Git
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      - id: version
+        name: Determine version from tag
+        uses: ./.github/actions/read_tag
+      - name: Prepare builder
+        uses: ./.github/actions/builder
+        with:
+          file: helm/Dockerfile
+          name: ${{ env.HELM_BUILDER_NAME }}
+      - name: Package Helm Chart
+        uses: ./.github/actions/builder_run
+        with:
+          image: ${{ env.HELM_BUILDER_NAME }}
+          command: task helm:package VERSION=${{ steps.version.outputs.tag }}
+      - name: Upload release
+        run: cr upload
+        # Necessary until https://github.com/helm/chart-releaser/issues/187 is fixed
+      - run: mkdir .cr-index
+      - name: Update Helm repository index
+        run: cr index --push
