--- a/terraform/Taskfile.yml
+++ b/terraform/Taskfile.yml
@@ -13,30 +13,47 @@ vars:
     roles/iam.roleAdmin
     roles/resourcemanager.projectIamAdmin
   TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE: terraform-credentials.json
-  TERRAFORM_STATE_BUCKET_URL: 'gs://terraform-{{.PROJECT_ID}}/'
+  TERRAFORM_STATE_BUCKET: 'terraform-{{.PROJECT_ID}}'
+  TERRAFORM_STATE_BUCKET_URL: 'gs://{{.TERRAFORM_STATE_BUCKET}}/'
 
 env:
   CLOUDSDK_CORE_PROJECT: '{{.PROJECT_ID}}'
   CLOUDSDK_COMPUTE_REGION: europe-west4
   CLOUDSDK_COMPUTE_ZONE: europe-west4-a
+  GOOGLE_CREDENTIALS: '{{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}}'
 
 tasks:
+  run: ['terraform {{.CLI_ARGS}}']
+
+  project:
+    - task: project:create
+    - task: project:link-billing-account
+    - task: project:enable-services
   project:create:
+    run: once
     cmds: [ "gcloud projects create {{.PROJECT_ID}}" ]
     status: [ "gcloud projects describe {{.PROJECT_ID}}" ]
-  billing-account:link:
+  project:link-billing-account:
+    run: once
     deps: [ project:create ]
     cmds: [ "gcloud beta billing projects link {{.PROJECT_ID}} --billing-account={{.BILLING_ACCOUNT_ID}}" ]
-    status: ["[ $(gcloud beta billing projects describe {{.PROJECT_ID}} --format='value(billingEnabled)') = 'True' ]"]
-  services:enable:
-    deps: [billing-account:link]
+    status: [ "[ $(gcloud beta billing projects describe {{.PROJECT_ID}} --format='value(billingEnabled)') = 'True' ]" ]
+  project:enable-services:
+    run: once
+    deps: [ project:link-billing-account ]
     cmds: [ "gcloud services enable {{.GCLOUD_API_SERVICES}}" ]
+
+  service-account:
+    - task: service-account:create
+    - task: service-account:add-roles
   service-account:create:
-    deps: [project:create]
-    cmds: ['gcloud iam service-accounts create terraform --display-name "Terraform service account"']
-    status: ['[ $(gcloud iam service-accounts list --filter={{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}} --format="value(EMAIL)") = {{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}} ]']
+    run: once
+    deps: [ project:create ]
+    cmds: [ 'gcloud iam service-accounts create terraform --display-name "Terraform service account"' ]
+    status: [ '[ $(gcloud iam service-accounts list --filter={{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}} --format="value(EMAIL)") = {{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}} ]' ]
   service-account:add-roles:
-    deps: [service-account:create]
+    run: once
+    deps: [ service-account:create ]
     cmds:
       - |
         for ROLE in {{.TERRAFORM_SERVICE_ACCOUNT_ROLES}}; do
@@ -45,30 +62,46 @@ tasks:
             --role "$ROLE"
         done
   service-account:create-key:
-    deps: [service-account:create]
-    cmds: ['gcloud iam service-accounts keys create {{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}} --iam-account={{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}}']
-    status: ['test -f {{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}}']
+    run: once
+    deps: [ service-account:create ]
+    cmds: [ 'gcloud iam service-accounts keys create {{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}} --iam-account={{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}}' ]
+    status: [ 'test -f {{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}}' ]
+
+  state-bucket:
+    - task: state-bucket:create
+    - task: state-bucket:configure
   state-bucket:create:
-    deps: [project:create]
-    cmds: ['gsutil mb -p {{.PROJECT_ID}} -c regional -l $CLOUDSDK_COMPUTE_REGION {{.TERRAFORM_STATE_BUCKET_URL}}']
-    status: ['gsutil ls {{.TERRAFORM_STATE_BUCKET_URL}}']
+    run: once
+    deps: [ project:create ]
+    cmds: [ 'gsutil mb -p {{.PROJECT_ID}} -c regional -l $CLOUDSDK_COMPUTE_REGION {{.TERRAFORM_STATE_BUCKET_URL}}' ]
+    status: [ 'gsutil ls {{.TERRAFORM_STATE_BUCKET_URL}}' ]
   state-bucket:configure:
-    deps: [state-bucket:create]
+    run: once
+    deps: [ state-bucket:create ]
     vars:
       PROJECT_NUMBER:
         sh: 'gcloud projects list --filter={{.PROJECT_ID}} --format="value(PROJECT_NUMBER)"'
+    ignore_error: true
     cmds:
       # Giving object admin rights to the Terraform service account
       - 'gsutil iam ch "serviceAccount:{{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}}:objectAdmin" {{.TERRAFORM_STATE_BUCKET_URL}}'
       # Taking away the access to the bucket from the project viewers
-      - 'gsutil acl ch -d "viewers-{{.PROJECT_NUMBER}}" {{.TERRAFORM_STATE_BUCKET_URL}}'
+      # TODO: Even though -f is passed, the command still fails on subsequent calls
+      - 'gsutil acl ch -f -d "viewers-{{.PROJECT_NUMBER}}" {{.TERRAFORM_STATE_BUCKET_URL}} || true'
       # Making bucket uniform access only
       - 'gsutil ubla set on {{.TERRAFORM_STATE_BUCKET_URL}}'
       # Enabling bucket object versioning
       - 'gsutil versioning set on {{.TERRAFORM_STATE_BUCKET_URL}}'
+
   provision:
-    - task: project:create
-    - task: service-account:create-key
-    - task: state-bucket:configure
+    - task: project
+    - task: service-account
+    - task: state-bucket
+
+  init:
+    deps: [ provision ]
+    cmds: [ 'terraform init --backend-config="bucket={{.TERRAFORM_STATE_BUCKET}}"' ]
+
+
 
 
