Add adding and getting data and start work on preprocessing

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -21,6 +21,7 @@ includes:
 
 tasks:
   prepare:
+    - source python-version.sh
     - task: interface_service:prepare
     - task: learning_service:prepare
     - task: frontend:prepare
