--- a/terraform/Taskfile.yml
+++ b/terraform/Taskfile.yml
@@ -27,7 +27,7 @@ env:
   TF_VAR_zone: '{{.GCLOUD_ZONE}}'
 
 tasks:
-  run: ['{{.TERRAFORM_CMD}} {{.CLI_ARGS}}']
+  run: [ '{{.TERRAFORM_CMD}} {{.CLI_ARGS}}' ]
 
   project:
     - task: project:create
@@ -65,6 +65,10 @@ tasks:
     deps: [ service-account:create ]
     cmds: [ 'gcloud iam service-accounts keys create {{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}} --iam-account={{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}}' ]
     status: [ 'test -f {{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}}' ]
+  service-account:remove:
+    run: once
+    cmds: [ 'gcloud iam service-accounts delete {{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}}' ]
+    status: [ '[ ! $(gcloud iam service-accounts list --filter={{.TERRAFORM_SERVICE_ACCOUNT_EMAIL}} --format="value(EMAIL)") ]' ]
 
   state-bucket:
     - task: state-bucket:create
@@ -91,6 +95,10 @@ tasks:
       - 'gsutil ubla set on {{.TERRAFORM_STATE_BUCKET_URL}}'
       # Enabling bucket object versioning
       - 'gsutil versioning set on {{.TERRAFORM_STATE_BUCKET_URL}}'
+  state-bucket:remove:
+    run: once
+    cmds: [ 'gsutil -m rm -r {{.TERRAFORM_STATE_BUCKET_URL}}' ]
+    status: [ '[ ! $(gsutil ls | grep {{.TERRAFORM_STATE_BUCKET_URL}}) ]' ]
 
   provision:
     - task: project
@@ -105,6 +113,13 @@ tasks:
     cmds: [ '{{.TERRAFORM_CMD}} apply {{.CLI_ARGS}}' ]
   destroy:
     cmds: [ '{{.TERRAFORM_CMD}} destroy {{.CLI_ARGS}}' ]
+
+  cleanup:
+    - task: state-bucket:remove
+    - task: service-account:remove
+    - rm -rf {{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}}
+    - rm -rf project/.terraform
+
 
 
 
