--- a/learning_service/requirements.txt
+++ b/learning_service/requirements.txt
@@ -1,14 +1,16 @@
 numpy
 pandas
 nltk
-scipy
+scipy==1.6.2
 matplotlib
-scikit-learn
+scikit-learn==0.24.1
 codecarbon
 dslinter
 pylint==2.12.2
 dvc
 pytest
+pytest-xdist
+parameterized
 mllint
 joblib
 tensorflow-data-validation
