--- a/.github/actions/builder/action.yml
+++ b/.github/actions/builder/action.yml
@@ -20,6 +20,13 @@ inputs:
 runs:
   using: composite
   steps:
+    - name: Cache Docker layers
+      uses: actions/cache@v3
+      with:
+        path: /tmp/.buildx-${{ inputs.name }}-cache
+        key: ${{ runner.os }}-buildx-${{ inputs.name }}-${{ github.sha }}
+        restore-keys: |
+            ${{ runner.os }}-buildx-${{ inputs.name }}-
     - name: Build builder
       uses: docker/build-push-action@v3
       with:
@@ -28,5 +35,10 @@ runs:
         target: ${{ inputs.target }}
         tags: ${{ inputs.name }}
         load: true
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        cache-from: type=local,src=/tmp/.buildx-${{ inputs.name }}-cache
+        cache-to: type=local,dest=/tmp/.buildx-${{ inputs.name }}-cache-new,mode=max
+    - name: Use new cache
+      shell: bash
+      run: |
+          rm -rf /tmp/.buildx-${{ inputs.name }}-cache
+          mv /tmp/.buildx-${{ inputs.name }}-cache-new /tmp/.buildx-${{ inputs.name }}-cache
