--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   IMAGE_NAME_BASE: ghcr.io/${{ github.repository }}
-  HELM_BUILDER_NAME: helm-builder:latest
+  HELM_BUILDER_NAME: helm-builder
 
 jobs:
   learning-service:
