--- a/.github/actions/build_and_push/action.yml
+++ b/.github/actions/build_and_push/action.yml
@@ -14,6 +14,10 @@ inputs:
   push:
     description: Whether to push the image to the registry
     required: true
+  cache_key:
+    description: Key of the GitHub Actions cache
+    required: false
+    default: ${{ runner.os }}-${{ github.workflow }}-${{ github.job }}-${{ github.ref_name }}
 
 runs:
   using: composite
@@ -28,6 +32,14 @@ runs:
           type=semver,pattern={{major}}.{{minor}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.0.') }}
           type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
           latest
+    - name: Prepare Docker layer cache
+      uses: actions/cache@v3
+      with:
+        path: /tmp/buildx-cache/${{ inputs.cache_key }}
+        key: ${{ inputs.cache_key }}-${{ github.sha }}
+        restore-keys: |
+            ${{ runner.os }}-${{ github.workflow }}-${{ github.job }}-${{ github.ref_name }}-
+            ${{ runner.os }}-${{ github.workflow }}-${{ github.job }}-
     - name: Build and push
       uses: docker/build-push-action@v3
       with:
@@ -36,6 +48,15 @@ runs:
         push: ${{ inputs.push }}  
         tags: ${{ steps.metadata.outputs.tags }}  
         labels: ${{ steps.metadata.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        cache-from: type=local,src=/tmp/buildx-cache/${{ inputs.cache_key }}
+        cache-to: type=local,dest=/tmp/buildx-cache/${{ inputs.cache_key }}-new,mode=max
+    - name: Move cache
+      # Temp fix
+      # https://github.com/docker/build-push-action/issues/252
+      # https://github.com/moby/buildkit/issues/1896
+      # https://github.com/moby/buildkit/issues/2887
+      shell: bash
+      run: |
+          rm -rf /tmp/buildx-cache/${{ inputs.cache_key }}
+          mv /tmp/buildx-cache/${{ inputs.cache_key }}-new /tmp/buildx-cache/${{ inputs.cache_key }}
         
