--- a/.github/actions/builder/action.yml
+++ b/.github/actions/builder/action.yml
@@ -19,19 +19,19 @@ inputs:
   cache_key:
     description: Key of the GitHub Actions cache
     required: false
-    default: ${{ runner.os }}-${{ github.job }}-${{ github.ref_name }}
+    default: ${{ runner.os }}-${{ github.workflow }}-${{ github.job }}-${{ github.ref_name }}
 
 runs:
   using: composite
   steps:
-    - name: Cache Docker layers
+    - name: Prepare Docker layer cache
       uses: actions/cache@v3
       with:
         path: /tmp/buildx-cache/${{ inputs.cache_key }}
         key: ${{ inputs.cache_key }}-${{ github.sha }}
         restore-keys: |
-            ${{ runner.os }}-${{ github.job }}-${{ github.ref_name }}-
-            ${{ runner.os }}-${{ github.job }}-
+            ${{ runner.os }}-${{ github.workflow }}-${{ github.job }}-${{ github.ref_name }}-
+            ${{ runner.os }}-${{ github.workflow }}-${{ github.job }}-
     - name: Build builder
       uses: docker/build-push-action@v3
       with:
@@ -42,7 +42,11 @@ runs:
         load: true
         cache-from: type=local,src=/tmp/buildx-cache/${{ inputs.cache_key }}
         cache-to: type=local,dest=/tmp/buildx-cache/${{ inputs.cache_key }}-new,mode=max
-    - name: Use new cache
+    - name: Move cache
+      # Temp fix
+      # https://github.com/docker/build-push-action/issues/252
+      # https://github.com/moby/buildkit/issues/1896
+      # https://github.com/moby/buildkit/issues/2887
       shell: bash
       run: |
           rm -rf /tmp/buildx-cache/${{ inputs.cache_key }}
