--- a/.github/actions/build_and_push/action.yml
+++ b/.github/actions/build_and_push/action.yml
@@ -35,21 +35,21 @@ runs:
     - name: Prepare Docker layer cache
       uses: actions/cache@v3
       with:
-        path: /tmp/buildx-cache/${{ inputs.cache_key }}
+        path: /tmp/.buildx-cache
         key: ${{ inputs.cache_key }}-${{ github.sha }}
         restore-keys: |
-            ${{ runner.os }}-${{ github.workflow }}-${{ github.job }}-${{ github.ref_name }}-
-            ${{ runner.os }}-${{ github.workflow }}-${{ github.job }}-
+          ${{ inputs.cache_key }}
+          ${{ runner.os }}-${{ github.workflow }}-${{ github.job }}-
     - name: Build and push
       uses: docker/build-push-action@v3
       with:
         context: ${{ inputs.context }}
         file: ${{ inputs.file }}
-        push: ${{ inputs.push }}  
-        tags: ${{ steps.metadata.outputs.tags }}  
+        push: ${{ inputs.push }}
+        tags: ${{ steps.metadata.outputs.tags }}
         labels: ${{ steps.metadata.outputs.labels }}
-        cache-from: type=local,src=/tmp/buildx-cache/${{ inputs.cache_key }}
-        cache-to: type=local,dest=/tmp/buildx-cache/${{ inputs.cache_key }}-new,mode=max
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
     - name: Move cache
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
@@ -57,6 +57,5 @@ runs:
       # https://github.com/moby/buildkit/issues/2887
       shell: bash
       run: |
-          rm -rf /tmp/buildx-cache/${{ inputs.cache_key }}
-          mv /tmp/buildx-cache/${{ inputs.cache_key }}-new /tmp/buildx-cache/${{ inputs.cache_key }}
-        
+        rm -rf /tmp/.buildx-cache
+        mv /tmp/.buildx-cache-new /tmp/.buildx-cache
