--- a/interface_service/Taskfile.yml
+++ b/interface_service/Taskfile.yml
@@ -53,4 +53,4 @@ tasks:
   test:
     deps: [ prepare ]
     cmds:
-      - "{{.ENV}}/bin/pytest -n {{.CORE_COUNT}}"
+      - "{{.ENV}}/bin/pytest -n auto"
