--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -21,7 +21,9 @@ includes:
 
 tasks:
   prepare:
+    preconditions:
     - source python-version.sh
+    cmds:
     - task: interface_service:prepare
     - task: learning_service:prepare
     - task: frontend:prepare
