Freeze requirements in learning service

--- a/learning_service/requirements.txt
+++ b/learning_service/requirements.txt
@@ -1,19 +1,207 @@
-numpy
-pandas
-nltk
-scipy==1.7.3
-matplotlib
-scikit-learn==0.24.1
-codecarbon
-dslinter
+absl-py==1.1.0
+aiohttp==3.8.1
+aiohttp-retry==2.4.6
+aiosignal==1.2.0
+apache-beam==2.39.0
+appdirs==1.4.4
+arrow==1.2.2
+astroid==2.9.3
+astunparse==1.6.3
+async-timeout==4.0.2
+asyncssh==2.10.1
+atomicwrites==1.4.0
+atpublic==3.0.1
+attrs==21.4.0
+backcall==0.2.0
+cachetools==4.2.4
+certifi==2022.5.18.1
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.3
+cloudpickle==2.1.0
+codecarbon==2.1.2
+colorama==0.4.4
+commonmark==0.9.1
+configobj==5.0.6
+crcmod==1.7
+cryptography==37.0.2
+cycler==0.11.0
+data-science-types==0.2.23
+decorator==5.1.1
+dictdiffer==0.9.0
+dill==0.3.1.1
+diskcache==5.4.0
+distro==1.7.0
+docopt==0.6.2
+dpath==2.0.6
+dslinter==2.0.8
+dulwich==0.20.42
+dvc==2.10.2
+dvc-render==0.0.5
+dvclive==0.8.2
+execnet==1.9.0
+fastavro==1.4.12
+fasteners==0.17.3
+flatbuffers==1.12
+flatten-dict==0.4.2
+flufl.lock==7.0
+fonttools==4.33.3
+frozenlist==1.3.0
+fsspec==2022.5.0
+ftfy==6.1.1
+funcy==1.17
+future==0.18.2
+fuzzywuzzy==0.18.0
+gast==0.4.0
+gitdb==4.0.9
+GitPython==3.1.27
+google-api-core==1.31.6
+google-api-python-client==1.12.11
+google-apitools==0.5.31
+google-auth==1.35.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
+google-cloud-bigquery==2.34.3
+google-cloud-bigquery-storage==2.13.1
+google-cloud-bigtable==1.7.1
+google-cloud-core==1.7.2
+google-cloud-datastore==1.15.4
+google-cloud-dlp==3.7.0
+google-cloud-language==1.3.1
+google-cloud-pubsub==2.12.1
+google-cloud-pubsublite==1.4.2
+google-cloud-recommendations-ai==0.2.0
+google-cloud-spanner==1.19.2
+google-cloud-videointelligence==1.16.2
+google-cloud-vision==1.0.1
+google-crc32c==1.3.0
+google-pasta==0.2.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.2
+grandalf==0.6
+grpc-google-iam-v1==0.12.4
+grpcio==1.46.3
+grpcio-gcp==0.2.2
+grpcio-status==1.46.3
+h5py==3.7.0
+hdfs==2.7.0
+httplib2==0.19.1
+idna==3.3
+importlib-metadata==4.11.4
+importlib-resources==5.7.1
+iniconfig==1.1.1
+ipython==7.34.0
+isort==5.10.1
+jedi==0.18.1
+joblib==0.14.1
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.2
+lazy-object-proxy==1.7.1
+-e git+ssh://git@github.com/remla2022/stackoverflow-tagger.git@f994997d8f56b5669ca233d40545f1f3d5fad664#egg=learning_service&subdirectory=learning_service
+libclang==14.0.1
+mailchecker==4.1.17
+Markdown==3.3.7
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+mllint==0.12.1
+multidict==6.0.2
+mypy==0.931
+mypy-extensions==0.4.3
+nanotime==0.5.2
+networkx==2.8.2
+nltk==3.7
+numpy==1.22.4
+oauth2client==4.1.3
+oauthlib==3.2.0
+opt-einsum==3.3.0
+orjson==3.7.1
+overrides==6.1.0
+packaging==21.3
+pandas==1.4.2
+parameterized==0.8.1
+parso==0.8.3
+pathspec==0.9.0
+phonenumbers==8.12.49
+pickleshare==0.7.5
+Pillow==9.1.1
+platformdirs==2.5.2
+pluggy==1.0.0
+prompt-toolkit==3.0.29
+proto-plus==1.20.5
+protobuf==3.19.4
+psutil==5.9.1
+py==1.11.0
+py-cpuinfo==8.0.0
+py4j==0.10.9
+pyarrow==5.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydot==1.4.2
+pyfarmhash==0.3.2
+pygit2==1.9.2
+Pygments==2.12.0
+pygtrie==2.4.2
 pylint==2.12.2
-dvc
-pytest
-pytest-xdist
-parameterized
-mllint
-joblib
-tensorflow-data-validation
-ipython
-termgraph
+pymongo==3.12.3
+pynvml==11.4.1
+pyparsing==2.4.7
+pyspark==3.0.3
+pyspark-stubs==3.0.0.post3
+pytest==7.1.2
+pytest-forked==1.4.0
+pytest-xdist==2.5.0
+python-benedict==0.25.1
+python-dateutil==2.8.2
+python-fsutil==0.6.1
+python-slugify==6.1.2
+pytz==2022.1
+PyYAML==6.0
+regex==2022.6.2
+requests==2.27.1
+requests-oauthlib==1.3.1
+rich==12.4.4
+rsa==4.8
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+scikit-learn==0.24.1
+scipy==1.7.3
+scmrepo==0.0.19
+shortuuid==1.0.9
+shtab==1.5.4
+six==1.16.0
+smmap==5.0.0
+tabulate==0.8.9
+tensorboard==2.9.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-data-validation==1.8.0
 tensorflow-data-validation[visualization]
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+tensorflow-metadata==1.8.0
+tensorflow-serving-api==2.8.0
+termcolor==1.1.0
+termgraph==0.5.3
+text-unidecode==1.3
+tfx-bsl==1.8.0
+threadpoolctl==3.1.0
+toml==0.10.2
+tomli==2.0.1
+tqdm==4.64.0
+traitlets==5.2.2.post1
+typing-utils==0.1.0
+typing_extensions==4.2.0
+uritemplate==3.0.1
+urllib3==1.26.9
+voluptuous==0.13.1
+wcwidth==0.2.5
+Werkzeug==2.1.2
+wrapt==1.13.3
+xmltodict==0.13.0
+yarl==1.7.2
+zc.lockfile==2.0
+zipp==3.8.0
