Streamlined Task tasks that work with virtualenv

--- a/interface_service/Dockerfile
+++ b/interface_service/Dockerfile
@@ -1,5 +1,4 @@
-FROM python:3.10 AS builder
-ARG TASK_URL=https://github.com/go-task/task/releases/download/v3.12.1/task_linux_amd64.deb
+FROM python:3.10 AS common
 
 RUN mkdir /app \
     && useradd -d /app appuser \
@@ -10,20 +9,36 @@ RUN apt-get update \
     && apt-get purge -y --auto-remove gcc libc-dev \
     && rm -rf /var/lib/apt/lists/*
 
+FROM common AS builder
+ARG TASK_URL=https://github.com/go-task/task/releases/download/v3.12.1/task_linux_amd64.deb
+
 RUN curl -o task.deb -L ${TASK_URL} \
     && dpkg -i task.deb \
     && rm task.deb
 
+ENV XDG_CACHE_HOME /cache
+RUN mkdir $XDG_CACHE_HOME
+
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+
+RUN pip install --upgrade pip wheel \
+    && pip install -r requirements.txt \
+    && chmod -R 777 $XDG_CACHE_HOME
 
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
-FROM builder AS final
+FROM common AS final
 EXPOSE 8000
+
+COPY requirements.txt .
+
+RUN pip install --upgrade pip wheel --no-cache-dir \
+    && pip install -r requirements.txt --no-cache-dir
 
 WORKDIR /app
 USER appuser
 RUN mkdir models
 
 COPY . .
+
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
