--- a/helm/stackoverflow-tagger/templates/ingress.yaml
+++ b/helm/stackoverflow-tagger/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.ingress }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -40,3 +41,4 @@ spec:
                 port:
                   number: {{ $.Values.interfaceService.service.port }}
     {{- end }}
+  {{ end }}
