--- a/interface_service/src/configs/settings.yaml
+++ b/interface_service/src/configs/settings.yaml
@@ -7,3 +7,6 @@ development:
   BUCKET_NAME: stackoverflow-tagger
   MODEL_OBJECT_KEY: filename
   MODEL_LOCAL_PATH: filename
+  PUBSUB_PROJECT_ID: buckettesting-352212
+  PUBSUB_TOPIC_ID: new-model-data
+  PUBSUB_SUBSCRIPTION_ID: interface-service-new-model
