Separate Terraform project for Kubernetes stuff

--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -2,7 +2,7 @@ terraform-credentials.json
 
 ### Terraform template
 # Local .terraform directories
-**/.terraform/*
+**/.terraform
 
 # .tfstate files
 *.tfstate
