--- a/terraform/Taskfile.yml
+++ b/terraform/Taskfile.yml
@@ -11,8 +11,8 @@ vars:
     roles/iam.roleAdmin
     roles/resourcemanager.projectIamAdmin
   TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE: terraform-credentials.json
-  TERRAFORM_STATE_BUCKET: 'terraform-{{.PROJECT_ID}}'
-  TERRAFORM_STATE_BUCKET_URL: 'gs://{{.TERRAFORM_STATE_BUCKET}}/'
+  TERRAFORM_STATE_BUCKET: '{{.PROJECT_ID}}-terraform'
+  TERRAFORM_STATE_BUCKET_URL: 'gs://{{.TERRAFORM_STATE_BUCKET}}'
   TERRAFORM_BUILDER_IMAGE: remla-stackoverflow-tagger/terraform-builder
   TERRAFORM_GCLOUD_AUTH_CONTAINER: remla-stackoverflow-tagger-gcloud-config
   GCLOUD_REGION: '{{.GCLOUD_REGION | default "europe-west4"}}'
@@ -27,9 +27,15 @@ env:
   TF_VAR_region: '{{.GCLOUD_REGION}}'
   TF_VAR_zone: '{{.GCLOUD_ZONE}}'
 
-tasks:
-  run: [ 'terraform {{.CLI_ARGS}}' ]
+includes:
+  gcloud:
+    taskfile: ./project-gcloud
+    dir: ./project-gcloud
+  kubernetes:
+    taskfile: ./project-kubernetes
+    dir: ./project-kubernetes
 
+tasks:
   project:
     - task: project:create
     - task: project:link-billing-account
@@ -106,25 +112,17 @@ tasks:
     - task: service-account
     - task: state-bucket
 
-  init:
-    cmds: [ 'terraform -chdir=project init --backend-config="bucket={{.TERRAFORM_STATE_BUCKET}}" {{.CLI_ARGS}}' ]
-  plan:
-    cmds: [ 'terraform -chdir=project plan {{.CLI_ARGS}}' ]
-  apply:
-    cmds: [ 'terraform -chdir=project apply {{.CLI_ARGS}}' ]
-  destroy:
-    cmds: [ 'terraform -chdir=project destroy {{.CLI_ARGS}}' ]
-
   fmt:
     cmds: [ 'terraform fmt --recursive {{.CLI_ARGS}}' ]
   validate:
     cmds: [ 'terraform validate {{.CLI_ARGS}}' ]
 
   cleanup:
-    - task: state-bucket:remove
     - task: service-account:remove
-    - rm -rf {{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}}
-    - rm -rf project/.terraform
+    - rm -f {{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}}
+    - task: gcloud:cleanup
+    - task: kubernetes:cleanup
+    - task: state-bucket:remove
 
   build-builder:
     cmds: [ "docker build --target builder -t {{.TERRAFORM_BUILDER_IMAGE}} ." ]
