--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - "8085:8085"
     entrypoint: "gcloud beta emulators pubsub start"
     command:
+      - "--host-port=0.0.0.0:8085"
       - "--data-dir=/data"
     volumes:
       - "pubsub-data:/data"
