--- a/interface_service/src/configs/settings.yaml
+++ b/interface_service/src/configs/settings.yaml
@@ -7,7 +7,7 @@ development:
   BUCKET_NAME: stackoverflow-tagger
   MODEL_OBJECT_KEY: filename
   MODEL_LOCAL_PATH: filename
-  PUBSUB_HOST: localhost:8085
+  PUBSUB_EMULATOR_HOST: localhost:8085
   PUBSUB_PROJECT_ID: testlocal-123
   PUBSUB_TOPIC_ID: new-model-data
   PUBSUB_SUBSCRIPTION_ID: interface-service-new-model
