Extra way of specifying GCloud credentials

--- a/terraform/Taskfile.yml
+++ b/terraform/Taskfile.yml
@@ -17,12 +17,13 @@ vars:
   TERRAFORM_GCLOUD_AUTH_CONTAINER: remla-stackoverflow-tagger-gcloud-config
   GCLOUD_REGION: '{{.GCLOUD_REGION | default "europe-west4"}}'
   GCLOUD_ZONE: '{{.GCLOUD_ZONE | default "europe-west4-a"}}'
+  GOOGLE_CREDENTIALS: '{{.GOOGLE_CREDENTIALS | default (printf "../%s" .TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE)}}'
 
 env:
   CLOUDSDK_CORE_PROJECT: '{{.PROJECT_ID}}'
   CLOUDSDK_COMPUTE_REGION: '{{.GCLOUD_REGION}}'
   CLOUDSDK_COMPUTE_ZONE: '{{.GCLOUD_ZONE}}'
-  GOOGLE_CREDENTIALS: '../{{.TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE}}'
+  GOOGLE_CREDENTIALS: '{{.GOOGLE_CREDENTIALS}}'
   TF_VAR_project_id: '{{.PROJECT_ID}}'
   TF_VAR_region: '{{.GCLOUD_REGION}}'
   TF_VAR_zone: '{{.GCLOUD_ZONE}}'
