--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ env:
 jobs:
   gcloud_plan:
     name: 'Terraform plan - Google Cloud'
-    environment: staging
+    environment: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -34,16 +34,16 @@ jobs:
           name: ${{ env.TERRAFORM_BUILDER_NAME }}
       - name: Prepare credentials
         env:
-          TERRAFORM_SA_KEY_BASE64: ${{ secrets.TERRAFORM_SA_KEY }}
+          TERRAFORM_SA_KEY_BASE64: ${{ secrets.TERRAFORM_SA_KEY_BASE64 }}
         run: |
           echo $TERRAFORM_SA_KEY_BASE64 | base64 --decode > terraform/terraform-credentials.json
       - name: Terraform init
         uses: ./.github/actions/builder_run
         with:
           image: ${{ env.TERRAFORM_BUILDER_NAME }}
-          command: task terraform:gcloud:init PROJECT_ID=remla2022-staging
+          command: task terraform:gcloud:init PROJECT_ID=remla2022-test
       - name: Terraform plan
         uses: ./.github/actions/builder_run
         with:
           image: ${{ env.TERRAFORM_BUILDER_NAME }}
-          command: task terraform:gcloud:plan PROJECT_ID=remla2022-staging
+          command: task terraform:gcloud:plan PROJECT_ID=remla2022-test
