--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,53 +24,28 @@ env:
 
 jobs:
   deploy_test:
-    name: 'Google Cloud - plan'
+    name: 'Deploy test'
     environment: test
     runs-on: ubuntu-latest
-    env:
-      GCLOUD_PROJECT_ID: remla2022-test
-      TFVARS_FILE: test.tfvars
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
-      - name: Prepare builder
-        uses: ./.github/actions/builder
+      - name: Deploy Terraform
+        uses: ./.github/actions/deploy
         with:
-          file: terraform/Dockerfile
-          context: terraform
-          name: ${{ env.TERRAFORM_BUILDER_NAME }}
-          cache_key: ${{ runner.os }}-deploy-test
-      - name: Prepare credentials
-        env:
-          TERRAFORM_SA_KEY_BASE64: ${{ secrets.terraform_sa_key_base64 }}
-        run: |
-          echo $TERRAFORM_SA_KEY_BASE64 | base64 --decode > terraform/terraform-credentials.json
-      - name: Google Cloud Terraform init
-        uses: ./.github/actions/builder_run
+          project_id: remla2022-test
+          tfvars_file: test.tfvars
+          terraform_sa_key_base64: ${{ secrets.TERRAFORM_SA_KEY_BASE64 }}
+  deploy_production:
+    name: 'Deploy production'
+    environment: production
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v2
+      - name: Deploy Terraform
+        uses: ./.github/actions/deploy
         with:
-          image: ${{ env.TERRAFORM_BUILDER_NAME }}
-          command: task terraform:gcloud:init PROJECT_ID=${{ env.GCLOUD_PROJECT_ID }} -- --input=false
-      - name: Kubernetes Terraform init
-        uses: ./.github/actions/builder_run
-        with:
-          image: ${{ env.TERRAFORM_BUILDER_NAME }}
-          command: task terraform:kubernetes:init PROJECT_ID=${{ env.GCLOUD_PROJECT_ID }} -- --input=false
-      - name: Google Cloud Terraform apply
-        uses: ./.github/actions/builder_run
-        with:
-          image: ${{ env.TERRAFORM_BUILDER_NAME }}
-          command: >-
-            task terraform:gcloud:apply PROJECT_ID=${{ env.GCLOUD_PROJECT_ID }} -- 
-            --input=false 
-            --auto-approve
-            --var-file=${{ env.TFVARS_FILE }}
-      - name: Kubernetes Terraform apply
-        uses: ./.github/actions/builder_run
-        with:
-          image: ${{ env.TERRAFORM_BUILDER_NAME }}
-          command: >-
-            task terraform:kubernetes:apply PROJECT_ID=${{ env.GCLOUD_PROJECT_ID }} -- 
-            --input=false
-            --auto-approve
-            --var-file=${{ env.TFVARS_FILE }}
-            --var=chart_version=${{ inputs.chart_version }}
+          project_id: remla2022-prod
+          tfvars_file: production.tfvars
+          terraform_sa_key_base64: ${{ secrets.TERRAFORM_SA_KEY_BASE64 }}
