--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,8 @@ env:
 jobs:
   learning-service:
     name: Build learning service
-    runs-on: ubuntu-latest
+    if: 'false'
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -33,7 +34,8 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
   interface-service:
     name: Build interface service
-    runs-on: ubuntu-latest
+    if: 'false'
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -53,7 +55,8 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
   frontend:
     name: Build frontend
-    runs-on: ubuntu-latest
+    if: 'false'
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -73,7 +76,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
   helm:
     name: Package and publish Helm Chart
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     if: github.event_name != 'pull_request'
     needs:
       - learning-service
@@ -116,3 +119,12 @@ jobs:
       - run: mkdir .cr-index
       - name: Update Helm repository index
         run: cr index --push
+    outputs:
+      chart_version: ${{ steps.version.outputs.tag }}
+  deploy:
+    needs: [helm]
+    if: always()
+    uses: ./.github/workflows/deploy.yml
+    with:
+      chart_version: ${{ needs.helm.outputs.chart_version }}
+
