--- a/.github/workflows/verify-terraform.yml
+++ b/.github/workflows/verify-terraform.yml
@@ -16,7 +16,7 @@ env:
 jobs:
   verify-formatting:
     name: Verify formatting
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -33,7 +33,7 @@ jobs:
           command: task terraform:fmt -- --check
   validate:
     name: Validate
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
