--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   lint-interface-service:
     name: Lint interface service
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -31,7 +31,7 @@ jobs:
           command: task interface_service:lint
   lint-learning-service:
     name: Lint learning service
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -48,7 +48,7 @@ jobs:
           command: task learning_service:lint
   lint-frontend:
     name: Lint frontend
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
@@ -65,7 +65,7 @@ jobs:
           command: task frontend:lint
   lint-helm:
     name: Lint Helm Chart
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
