--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,6 @@ on:
         type: environment
         required: true
 
-env:
-  TERRAFORM_BUILDER_NAME: terraform-builder
-
 jobs:
   deploy_test:
     name: 'Deploy test'
@@ -29,6 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
+      - run: echo "${{ secrets.TERRAFORM_SA_KEY_BASE64 }}"
       - name: Deploy Terraform
         uses: ./.github/actions/deploy
         with:
