--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,11 @@ jobs:
   deploy_test:
     name: 'Deploy test'
     environment: test
+    concurrency: deploy-test
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
-      - run: echo "${{ secrets.TERRAFORM_SA_KEY_BASE64 }}"
       - name: Deploy Terraform
         uses: ./.github/actions/deploy
         with:
@@ -36,6 +36,7 @@ jobs:
   deploy_production:
     name: 'Deploy production'
     environment: production
+    concurrency: deploy-production
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
