--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ on:
 jobs:
   deploy_test:
     name: 'Deploy test'
+    if: github.event_name == 'workflow_call' || inputs.environment == 'test'
     environment: test
     concurrency: deploy-test
     runs-on: ubuntu-20.04
@@ -35,6 +36,7 @@ jobs:
           terraform_sa_key_base64: ${{ secrets.TERRAFORM_SA_KEY_BASE64 }}
   deploy_production:
     name: 'Deploy production'
+    if: github.event_name == 'workflow_call' || inputs.environment == 'production'
     environment: production
     concurrency: deploy-production
     runs-on: ubuntu-20.04
