--- a/dev/Taskfile.yml
+++ b/dev/Taskfile.yml
@@ -7,8 +7,8 @@ vars:
 
 tasks:
   compose: "{{.DEV_COMPOSE}} {{.CLI_ARGS}}"
-  compose:up: "{{.DEV_COMPOSE}} up --build --detach"
-  compose:start: "{{.DEV_COMPOSE}} up"
-  compose:stop: "{{.DEV_COMPOSE}} stop"
-  compose:down: "{{.DEV_COMPOSE}} down --volumes"
+  compose:up: "{{.DEV_COMPOSE}} up --build --detach {{.CLI_ARGS}}"
+  compose:start: "{{.DEV_COMPOSE}} up {{.CLI_ARGS}}"
+  compose:stop: "{{.DEV_COMPOSE}} stop {{.CLI_ARGS}}"
+  compose:down: "{{.DEV_COMPOSE}} down --volumes {{.CLI_ARGS}}"
   compose:logs: "{{.DEV_COMPOSE}} logs -f {{.CLI_ARGS}}"
